# idos-scraper

./: .gitignore  LICENSE  README.md  connection_scraper.py  main.py  pyproject.toml  response.html  station_hint.py
idos_scraper/: __init__.py
idos_scraper/examples/: search_and_page_connection.py  ui_search_station.py
idos_scraper/scrapers/: __init__.py  page_connections.py  search_connections.py  search_station.py
resources/: paging-response-jQuery.html
src/idos_scraper/: log.py
src/idos_scraper/examples/: async_search_and_page_connection.py  search_and_page_connection.py  ui_search_station.py
src/idos_scraper/scrapers/: __init__.py  async_page_connections.py  async_search_connections.py  async_search_station.py  page_connections.py  search_connections.py  search_station.py
