[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idos-scraper"
version = "0.2.2"
authors = [
  { name="Tomas Deingruber", email="Deingruber.Tomas+idos-scraper@gmail.com" },
]
description = "Scrapes Czech public transport data from IDOS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.11",
    "PySimpleGUI>=4.30",
    "aiohttp>=3.8",
]

[project.urls]
"Homepage" = "https://github.com/Tomdein/idos-scraper"
"Repository" = "https://github.com/Tomdein/idos-scraper"
"Documentation" = "https://github.com/Tomdein/idos-scraper"
"Bug Tracker" = "https://github.com/Tomdein/idos-scraper/issues"